--- a/jitsi_sdk/build.gradle
+++ b/jitsi_sdk/build.gradle
@@ -4,10 +4,6 @@ plugins {
 }
 
 android {
-    signingConfigs {
-        release {
-        }
-    }
     compileSdk 32
 
     defaultConfig {
@@ -23,10 +19,8 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-//            signingConfig signingConfigs.release
         }
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -43,26 +37,23 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
 
-android{
-publishing {
-    singleVariant('release') {
-        withSourcesJar()
-        withJavadocJar()
-    }
-    // ...
-}
-}
-
-apply plugin: 'maven-publish'
-afterEvaluate{
-    publishing{
-        publications{
-            release(MavenPublication){
-                from components.release
-
-                groupId = 'com.github.williamrstrebe'
-                artifactId = 'jitsi_launcher'
-                version = '1.0'
+afterEvaluate {
+    publishing {
+        publications {
+            library(MavenPublication) {
+                from components.java
+            }
+        }
+        repositories {
+            maven {
+                url "https://gitlab.com/api/v4/projects/36796756/packages/maven"
+                credentials(HttpHeaderCredentials) {
+                    name = "token-teste-lib"
+                    value = gitlabDeployToken // the token is stored in ~/.gradle/gradle.properties
+                }
+                authentication {
+                    header(HttpHeaderAuthentication)
+                }
             }
         }
     }
